fix for aos overflow

--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -81,3 +81,8 @@ min-height: 40em;
 .padding-top-m {
   padding-top: 50px;
 }
+
+
+.overflow {
+  overflow-x: hidden;
+}
